--- a/www/requirements.txt
+++ b/www/requirements.txt
@@ -3,9 +3,7 @@ Flask==0.10.1
 # Flask Extensions
 Flask-Assets==0.10
 Flask-Cache==0.13.1
-Flask-DebugToolbar==0.10.0
-Flask-Login==0.2.11
-Flask-SQLAlchemy==2.0
+Flask-PyMongo==0.4.1
 Flask-Script==2.0.5
 Flask-WTF==0.11
 
